--- a/Solutions/Week6/Week6Solution/BIWebApp/Views/Sales/CustomerActivity.cshtml
+++ b/Solutions/Week6/Week6Solution/BIWebApp/Views/Sales/CustomerActivity.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<string>
 
+
+    <hr/>
+    <h2>Top Activities of Loyal Customer</h2>
 @if (Model != null && Model.Any())
 {
     <ul>
