--- a/Solutions/Week6/Week6Solution/BIWebApp/Views/Shared/_Layout.cshtml
+++ b/Solutions/Week6/Week6Solution/BIWebApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Sales" asp-action="Index">Sales Partial View</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
