--- a/Solutions/Week6/Week6Solution/BIWebApp/Views/Home/Index.cshtml
+++ b/Solutions/Week6/Week6Solution/BIWebApp/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@{
+﻿@using BIWebApp.Helpers
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    @Html.BootstrapButton("Read", "warning", "/Tag/Warn")
+
+
 </div>
