--- a/Solutions/Week6/Week6Solution/BIWebApp/Views/Shared/Components/WeatherSummary/Default.cshtml
+++ b/Solutions/Week6/Week6Solution/BIWebApp/Views/Shared/Components/WeatherSummary/Default.cshtml
@@ -1,5 +1,6 @@
 ﻿@model string
 
 <div class="weather-summary">
+    <h2>Weather Summary by ISRO</h2>
     <strong>Forecast:</strong> @Model
 </div>
