--- a/Solutions/Week6/Week6Solution/BIWebApp/Views/Tag/Index.cshtml
+++ b/Solutions/Week6/Week6Solution/BIWebApp/Views/Tag/Index.cshtml
@@ -3,6 +3,10 @@
 <h2>Custom HTML Helper Example</h2>
 
 <div>
+
+    <!-- each html tag helper is an Extention method-->
+    <!-- Extention method is C# Programming concept -->
+    @Html.BootstrapButton("Read", "warning", "/Tag/Warn")
     @Html.BootstrapButton("Click Me", "success", "/Tag/Success")
     @Html.BootstrapButton("Delete", "danger", "/Tag/Danger")
 </div>
